Crash with "assert(RangeCheckElimination)" if RangeCheckElimination is disabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b120

      JDK-8151573 adds a PhaseIdealLoop::has_range_checks function(src/share/vm/opto/loopTransform.cpp module) with following assert:
      void PhaseIdealLoop::has_range_checks(IdealLoopTree *loop) {
        assert(RangeCheckElimination, "");
      ...

      Running java(2016-04-18 hs nightly bundle) with -XX:-RangeCheckElimination hits this assert on my linux-x64 under Virtual-box:
      java -XX:-RangeCheckElimination
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/loopTransform.cpp:2303
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/scratch/opt/jprt/T/P1/192409.cplummer/s/hotspot/src/share/vm/opto/loopTransform.cpp:2303), pid=31884, tid=32187
      # Error: assert(RangeCheckElimination) failed
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-04-18-192409.cplummer.hs-rt-8152761)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-04-18-192409.cplummer.hs-rt-8152761, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /home/dmitry/work/nighly_bundles/nightly.2016-04-18/fastdebug/bin/core.31884)
      #
      ...

      hs_err_pid31884.log and replay_pid31884.log are attached.

            Assignee:
            Tobias Hartmann
            Reporter:
            Dmitry Dmitriev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: