8154763: Crash with "assert(RangeCheckElimination)" if RangeCheckElimination is disabled

Disable multiversioning if range check elimination is turned off.

Reviewed-by: mcberg, kvn